@@ -706,4 +706,16 @@ CREATE TABLE history_log (
 
 CREATE INDEX history_log_i_c on history_str (itemid, clock);
 
+--
+-- Table structure for table 'autoreg'
+--
+
+CREATE TABLE autoreg (
+  id                    serial,
+  priority              int4		DEFAULT '0' NOT NULL,
+  pattern               varchar(255)	DEFAULT '' NOT NULL,
+  hostid                int4		DEFAULT '0' NOT NULL,
+  PRIMARY KEY (id)
+);
+
 VACUUM ANALYZE;
